# common-error

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md
common-error/: Cargo.toml  README.md  common-error.csv
common-error-build/: Cargo.toml  README.en.md
common-error-build/src/: lib.rs
common-error-test/: Cargo.toml  common-error.csv
common-error-test/src/: _common_error.rs  main.rs
common-error/src/: handle_await_macro.rs  handle_error_macro.rs  lib.rs
example/test-use-common-error/: Cargo.toml  build.rs
