[package]
name = "common-error-build"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/willingcoderverytime/common-error/"
description = "High performance universal error code management for Rust in Rust."
license = "Apache 2.0"
authors = ["Wang li li  <249639015@qq.com>"]
[lib]
name = "common_error_build"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.6"
[dependencies.syn]
version = "2.0.77"
[dependencies.quote]
version = "1.0.37"
default-features = false